# GULC

./: .gitignore  CMakeLists.txt  GuiReminders.txt  LifetimesThoughts.md  README.md  Reminders.txt  ideas.md
docs/: Versioning.md
docs/stdlib/: WorkingLayout.md
docs/syntax/: 01 Basics.md  02 Variables.md  03 Functions.md  04 StructsAndClasses.md  05 Traits.md  06 Templates.md  07 Contracts.md  08 PropertiesAndSubscripts.md  09 Error Handling.md
examples/: Advanced.md  NestedTypeTest.ghoul  NestedTypeTest.gul  NewAttributes.ghoul  Operators.ghoul  Operators.gul  SyntaxTest.gul  TemplateTypeTest.ghoul  TemplateWhereContractTest.ghoul  TemplateWhereContractTest.gul  TestFile.ghoul  TestFile.gul  Visibility.ghoul  build.ghoul  examples.gbuild
ideas/: Properties.md
notes/: extensions
src/: Target.cpp  Target.hpp  main.cpp  make_reverse_iterator.cpp  make_reverse_iterator.hpp
src/ast/: Attr.cpp  Attr.hpp  Cont.cpp  Cont.hpp  Decl.cpp  Decl.hpp  DeclModifiers.cpp  DeclModifiers.hpp  Expr.cpp  Expr.hpp  Identifier.cpp  Identifier.hpp  Node.cpp  Node.hpp  Stmt.cpp  Stmt.hpp  Type.cpp  Type.hpp
src/ast/attrs/: CopyAttr.cpp  CopyAttr.hpp  CustomAttr.cpp  CustomAttr.hpp  UnresolvedAttr.cpp  UnresolvedAttr.hpp
src/ast/conts/: EnsuresCont.cpp  EnsuresCont.hpp  RequiresCont.cpp  RequiresCont.hpp  ThrowsCont.cpp  ThrowsCont.hpp  WhereCont.cpp  WhereCont.hpp
src/ast/decls/: CallOperatorDecl.cpp  CallOperatorDecl.hpp  ConstructorDecl.cpp  ConstructorDecl.hpp  DestructorDecl.cpp  DestructorDecl.hpp  EnumConstDecl.cpp  EnumConstDecl.hpp  EnumDecl.cpp  EnumDecl.hpp  ExtensionDecl.cpp  ExtensionDecl.hpp  FunctionDecl.cpp  FunctionDecl.hpp  ImaginaryTypeDecl.cpp  ImaginaryTypeDecl.hpp  ImportDecl.cpp  ImportDecl.hpp  NamespaceDecl.cpp  NamespaceDecl.hpp  OperatorDecl.cpp  OperatorDecl.hpp  ParameterDecl.cpp  ParameterDecl.hpp  PropertyDecl.cpp  PropertyDecl.hpp  PropertyGetDecl.cpp  PropertyGetDecl.hpp  PropertySetDecl.cpp  PropertySetDecl.hpp  StructDecl.cpp  StructDecl.hpp  SubscriptOperatorDecl.cpp  SubscriptOperatorDecl.hpp  SubscriptOperatorGetDecl.cpp  SubscriptOperatorGetDecl.hpp  SubscriptOperatorSetDecl.cpp  SubscriptOperatorSetDecl.hpp  TemplateFunctionDecl.cpp  TemplateFunctionDecl.hpp  (+22 more)
src/ast/exprs/: ArrayLiteralExpr.cpp  ArrayLiteralExpr.hpp  AsExpr.cpp  AsExpr.hpp  AssignmentOperatorExpr.cpp  AssignmentOperatorExpr.hpp  BoolLiteralExpr.cpp  BoolLiteralExpr.hpp  CallOperatorReferenceExpr.cpp  CallOperatorReferenceExpr.hpp  CheckExtendsTypeExpr.cpp  CheckExtendsTypeExpr.hpp  ConstructorCallExpr.cpp  ConstructorCallExpr.hpp  ConstructorReferenceExpr.cpp  ConstructorReferenceExpr.hpp  CurrentSelfExpr.cpp  CurrentSelfExpr.hpp  DestructorCallExpr.cpp  DestructorCallExpr.hpp  DestructorReferenceExpr.cpp  DestructorReferenceExpr.hpp  EnumConstRefExpr.cpp  EnumConstRefExpr.hpp  FunctionCallExpr.cpp  FunctionCallExpr.hpp  FunctionReferenceExpr.cpp  FunctionReferenceExpr.hpp  HasExpr.cpp  HasExpr.hpp  IdentifierExpr.cpp  IdentifierExpr.hpp  ImaginaryRefExpr.cpp  ImaginaryRefExpr.hpp  ImplicitCastExpr.cpp  ImplicitCastExpr.hpp  ImplicitDerefExpr.cpp  ImplicitDerefExpr.hpp  IndexerCallExpr.hpp  InfixOperatorExpr.cpp  (+79 more)
src/ast/stmts/: BreakStmt.cpp  BreakStmt.hpp  CaseStmt.cpp  CaseStmt.hpp  CatchStmt.cpp  CatchStmt.hpp  CompoundStmt.cpp  CompoundStmt.hpp  ContinueStmt.cpp  ContinueStmt.hpp  DoCatchStmt.cpp  DoCatchStmt.hpp  DoStmt.cpp  DoStmt.hpp  DoWhileStmt.cpp  DoWhileStmt.hpp  FallthroughStmt.cpp  FallthroughStmt.hpp  ForStmt.cpp  ForStmt.hpp  GotoStmt.cpp  GotoStmt.hpp  IfStmt.cpp  IfStmt.hpp  LabeledStmt.cpp  LabeledStmt.hpp  RepeatWhileStmt.cpp  RepeatWhileStmt.hpp  ReturnStmt.cpp  ReturnStmt.hpp  SwitchStmt.cpp  SwitchStmt.hpp  TryStmt.hpp  WhileStmt.cpp  WhileStmt.hpp
src/ast/types/: AliasType.cpp  AliasType.hpp  BoolType.cpp  BoolType.hpp  BuiltInType.cpp  BuiltInType.hpp  DependentType.cpp  DependentType.hpp  DimensionType.cpp  DimensionType.hpp  EnumType.cpp  EnumType.hpp  FlatArrayType.cpp  FlatArrayType.hpp  FunctionPointerType.cpp  FunctionPointerType.hpp  ImaginaryType.cpp  ImaginaryType.hpp  LabeledType.cpp  LabeledType.hpp  NestedType.cpp  NestedType.hpp  PointerType.cpp  PointerType.hpp  ReferenceType.cpp  ReferenceType.hpp  SelfType.cpp  SelfType.hpp  StructType.cpp  StructType.hpp  TemplateStructType.cpp  TemplateStructType.hpp  TemplateTraitType.cpp  TemplateTraitType.hpp  TemplateTypenameRefType.cpp  TemplateTypenameRefType.hpp  TemplatedType.cpp  TemplatedType.hpp  TraitType.cpp  TraitType.hpp  (+6 more)
src/codegen/: CodeGen.cpp  CodeGen.hpp  Module.cpp  Module.hpp
src/linker/: Linker.cpp  Linker.hpp
src/namemangling/: ItaniumMangler.cpp  ItaniumMangler.hpp  ManglerBase.cpp  ManglerBase.hpp
src/objgen/: ObjFile.cpp  ObjFile.hpp  ObjGen.cpp  ObjGen.hpp
src/parsing/: ASTFile.cpp  ASTFile.hpp  Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  Token.hpp  TokenType.hpp
src/passes/: BaseResolver.cpp  BaseResolver.hpp  BasicDeclValidator.cpp  BasicDeclValidator.hpp  BasicTypeResolver.cpp  BasicTypeResolver.hpp  CircularReferenceChecker.cpp  CircularReferenceChecker.hpp  CodeProcessor.cpp  CodeProcessor.hpp  CodeTransformer.cpp  CodeTransformer.hpp  ConstInheriter.cpp  ConstInheriter.hpp  ConstTypeResolver.cpp  ConstTypeResolver.hpp  DeclInstValidator.cpp  DeclInstValidator.hpp  DeclInstantiator.cpp  DeclInstantiator.hpp  ExprTypeResolver.cpp  ExprTypeResolver.hpp  NameMangler.cpp  NameMangler.hpp  NamespacePrototyper.cpp  NamespacePrototyper.hpp  TypeResolver.cpp  TypeResolver.hpp
src/utilities/: ConstExprHelper.cpp  ConstExprHelper.hpp  ConstSolver.cpp  ConstSolver.hpp  ContractUtil.cpp  ContractUtil.hpp  FunctorUtil.cpp  FunctorUtil.hpp  InheritUtil.cpp  InheritUtil.hpp  SignatureComparer.cpp  SignatureComparer.hpp  SizeofUtil.cpp  SizeofUtil.hpp  TemplateCopyUtil.cpp  TemplateCopyUtil.hpp  TemplateInstHelper.cpp  TemplateInstHelper.hpp  TypeCompareUtil.cpp  TypeCompareUtil.hpp  TypeHelper.cpp  TypeHelper.hpp
